--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,5 @@
             "email": "domenico@happyflow.it"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "stable"
 }
