--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "domenico@happyflow.it"
         }
     ],
-    "minimum-stability": "stable",
-    "prefer-stable": "true"
+    "require": {
+        "php": ">=5.3.0"
+    }
 }
